@@ -2,6 +2,7 @@ Revision history for Mojolicious-Plugin-LinkEmbedder
 
 0.21
        * Add support for Spotify #19
+       * Improved Twitter links handling #17
 
 0.20     Tue Jan 20 20:09:11 2015
        * Add support for appear.in
